--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "url": "git+ssh://git@github.com/tamihh/react-starter.git"
   },
   "author": "Tamiris Simoneli",
+    "keywords": [
+    "react",
+    "movie"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tamihh/react-starter/issues"
@@ -15,26 +19,27 @@
   "homepage": "https://github.com/tamihh/react-starter#readme",
   "scripts": {
     "start": "npm run start:dev",
-    "start:dev": "webpack-dev-server --config webpack/client.dev.js --open",
+    "start:dev": "webpack-dev-server --mode development --config webpack/client.dev.js --open",
     "clean": "rimraf buildClient dist",
     "build": "npm run clean && webpack --config webpack/client.prod.js --color -p",
     "lint:fix": "eslint --fix src webpack",
     "lint": "eslint src webpack"
   },
   "dependencies": {
+    "imports-loader": "^0.8.0",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -48,17 +53,18 @@
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.7.2",
-    "react-hot-loader": "^4.0.0-beta.14",
+    "react-hot-loader": "^4.1.3",
     "redux-devtools-extension": "^2.13.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.0",
+    "webpack": "^4.8.2",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.21.0"
   }
 }
